--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
-  - type: static
+  - type: dynamic
     name: khatu-shyam-app
     buildCommand: echo "Building..."
     staticPublishPath: public
